--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "1.0.1",
   "description": "Checks if http header order is Firefox",
   "main": "index.js",
+  "scripts": {
+    "test": "node test"
+  },
   "keywords": [
     "bot",
     "http",
