--- a/package.json
+++ b/package.json
@@ -1,10 +1,12 @@
 {
   "name": "is-firefox-order",
-  "version": "1.0.2",
+  "version": "1.1.0",
   "description": "Checks if http header order is Firefox",
   "main": "index.js",
   "repository": "thepicture/is-firefox-order",
-  "files": ["index.js"],
+  "files": [
+    "index.js"
+  ],
   "scripts": {
     "test": "node test"
   },
